--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,21 @@ Title: Hottest 100 Countdown and Triple J Analysis in R
 Version: 0.1.0
 Author: Trent Henderson
 Maintainer: Trent Henderson <trent.henderson1@outlook.com>
-Description: Automates extraction of @triplejplays data and produces Hottest 100 analysis.
+Description: Automates extraction of @triplejplays data and produces Hottest 100 Countdown analysis.
 License: MIT
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 3.5.0)
 Imports: 
     dplyr, 
     ggplot2,
     rtweet,
-    magrittr
+    magrittr,
+    data.table,
+    ggplot2,
+    ggpubr,
+    janitor,
+    rvest,
+    XML
 RoxygenNote: 7.1.1
