--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,9 @@ Version: 0.1.0
 Author: Trent Henderson
 Maintainer: Trent Henderson <trent.henderson1@outlook.com>
 Description: Automates extraction of @triplejplays data and produces Hottest 100 Countdown analysis.
+             Some functions in the package access the Twitter API and thus require appropriate
+             credentials to be available in the R Environment prior to running. The 'twitteR'
+             package provides a useful setup_twitter_oauth() function for this.
 License: MIT
 Encoding: UTF-8
 LazyData: true
@@ -12,13 +15,13 @@ Depends:
     R (>= 3.5.0)
 Imports: 
     dplyr, 
-    ggplot2,
-    rtweet,
     magrittr,
-    data.table,
     ggplot2,
+    tidyr,
+    stringr,
     ggpubr,
     janitor,
+    rtweet,
     rvest,
     XML
 RoxygenNote: 7.1.1
