--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: hotteR
 Type: Package
-Title: Hottest 100 Countdown and Triple J Analysis in R
-Version: 0.1.3
-Date: 2021-07-09
+Title: Hottest 100 Countdown and Triple J Plays Webscraping and Analysis in R
+Version: 0.1.4
+Date: 2021-07-10
 Authors@R: c(
   person("Trent", "Henderson", email = "trent.henderson1@outlook.com", role = c("cre", "aut")),
   person("Joy", "Horng", email = "joy.horng@nousgroup.com.au", role = "aut")
   )
 Maintainer: Trent Henderson <trent.henderson1@outlook.com>
-Description: Automates extraction, analysis, and visualisation of triplejplays 
-    Twitter song data and official Hottest 100 Countdown results.
+Description: Automated extraction, processing, analysis, and visualisation of 
+    triplejplays Twitter song data and official Hottest 100 Countdown results.
 BugReports: https://github.com/hendersontrent/hotteR/issues
 License: GPL-3
 Encoding: UTF-8
@@ -19,6 +19,7 @@ Depends:
 Imports: 
     data.table,
     dplyr, 
+    tibble,
     magrittr,
     ggplot2,
     tidyr,
