--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ import(ggplot2)
 import(glue)
 import(rtweet)
 import(stringr)
+import(tibble)
 importFrom(data.table,rbindlist)
 importFrom(ggplot2,theme_set)
 importFrom(ggplot2,update_geom_defaults)
