--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,6 @@ importFrom(ggpubr,ggarrange)
 importFrom(janitor,clean_names)
 importFrom(magrittr,"%>%")
 importFrom(scales,comma)
+importFrom(stats,reorder)
 importFrom(stringr,str_to_title)
 importFrom(tidyr,pivot_longer)
