--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: hotteR
 Type: Package
 Title: Hottest 100 Countdown and Triple J Plays Webscraping and Analysis in R
-Version: 0.1.5
+Version: 0.1.6
 Date: 2021-07-10
 Authors@R: c(
   person("Trent", "Henderson", email = "trent.henderson1@outlook.com", role = c("cre", "aut")),
@@ -22,6 +22,7 @@ Imports:
     dplyr, 
     tibble,
     magrittr,
+    graphics,
     ggplot2,
     tidyr,
     stringr,
