--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(data.table,rbindlist)
 importFrom(ggplot2,theme_set)
 importFrom(ggplot2,update_geom_defaults)
 importFrom(ggpubr,ggarrange)
+importFrom(graphics,text)
 importFrom(janitor,clean_names)
 importFrom(magrittr,"%>%")
 importFrom(scales,comma)
